--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-typescript-library-template",
+  "name": "react-ambient",
   "version": "1.0.0",
   "description": "",
   "files": [
@@ -12,6 +12,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch --bail",
+    "test:debug": "node --inspect node_modules/jest/bin/jest.js --runInBand",
     "build:cjs": "tsc",
     "build:esm": "tsc -m es6 --outDir dist-esm",
     "watch:cjs": "tsc --watch",
@@ -38,7 +39,8 @@
   },
   "homepage": "https://github.com/a-type/react-typescript-library-template#readme",
   "peerDependencies": {
-    "react": "*"
+    "react": "^16.9",
+    "react-dom": "^16.9"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
@@ -61,7 +63,6 @@
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "typedoc": "0.17.0-3",
-    "typedoc-plugin-internal-external": "^2.2.0",
     "typescript": "^3.9.7"
   },
   "dependencies": {}
