fix prepublish script

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:esm": "tsc -m es6 --outDir dist-esm",
     "watch:cjs": "tsc --watch",
     "watch:esm": "tsc -m es6 --outDir dist-esm --watch",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "npm run build:cjs && npm run build:esm",
     "release": "npm publish --access public",
     "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook -o docs/storybook",
