--- a/package.json
+++ b/package.json
@@ -65,5 +65,7 @@
     "typedoc": "0.17.0-3",
     "typescript": "^3.9.7"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react-uid": "^2.3.0"
+  }
 }
