--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "email": "gaforres@gmail.com",
     "url": "https://github.com/a-type"
   },
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/a-type/react-typescript-library-template/issues"
   },
